quick fix for some styling responsiveness issues on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -505,7 +505,7 @@ img {
 	/* min-width: 400px; */
 	border-radius: 2rem;
 	padding: 1rem;
-	border: 1px solid yellow;
+	
 	
 	background-color: #3f474e;
 	display: flex;
