--- a/client/src/components/post/Post.css
+++ b/client/src/components/post/Post.css
@@ -13,7 +13,7 @@
 	background-color: rgba(24, 25, 26, 0);
 	overflow: auto;
 }
-.post-inner{
+.posta-inner{
   color: var(--light-color);
 	height: auto;
 	display: flex;
@@ -54,7 +54,7 @@
 	padding-top: .2rem;
 }
 
-.post-inner textarea{
+.posta-inner textarea{
 	font-family: inherit;
 	font-size: 100%;
 	background-color: #626d78;
@@ -67,9 +67,9 @@
   height: 5rem;
 }
 
-/* @media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
-  .post-inner {
+  .posta-inner {
 	
 		color: var(--light-color);
 		height: auto;
@@ -82,4 +82,20 @@
 		text-align: center;
 		padding-top: 2rem;
 	}
-} */
+}
+@media only screen and (max-width: 480px) {
+
+  .posta-inner {
+	
+		color: var(--light-color);
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		margin: 4rem auto;
+		align-items: center;
+		
+		text-align: center;
+		padding-top: 2rem;
+	}
+}
