--- a/client/src/components/posts/PostForm.css
+++ b/client/src/components/posts/PostForm.css
@@ -1,7 +1,8 @@
 .submit-post {
 	width: 500px;
+	max-width: 100%;
 	background-color: #3f474e;
-	/* border: #f4f4f4 solid 1px; */
+	
 	display: flex;
 	border-radius: 2rem;
 	flex-direction: column;
@@ -44,7 +45,7 @@ width: 100px;
 
 	.mentions-styling{
 		width: 90%;
-		height: 6rem;
+		min-height: 6rem;
 		background-color: rgb(98, 109, 120);
 		margin: 0 auto;
 		overflow: auto;
