--- a/client/src/components/posts/Posts.css
+++ b/client/src/components/posts/Posts.css
@@ -41,18 +41,18 @@
 	overflow: auto;
 }
 
-/* @media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
   .posts-inner {
 	
 		color: var(--light-color);
 		height: auto;
 		display: flex;
 		flex-direction: column;
-		width: 80%;
+		width: 100% !important;
 		margin: 4rem auto;
 		align-items: center;
 		
 		text-align: center;
 		padding-top: 2rem;
 	}
-} */
+}
