--- a/client/src/components/profiles/SmallProfile.css
+++ b/client/src/components/profiles/SmallProfile.css
@@ -5,7 +5,7 @@
 	/* min-width: 400px; */
 	border-radius: 2rem;
 	padding: 1rem;
-	border: 1px solid yellow;
+	
 	
 	background-color: #3f474e;
 	display: flex;
@@ -42,7 +42,7 @@
     /* min-width: 400px; */
     border-radius: 2rem;
     padding: 1rem;
-    border: 1px solid yellow;
+    
     
     background-color: #3f474e;
     display: flex;
@@ -77,7 +77,7 @@
     /* min-width: 400px; */
     border-radius: 2rem;
     padding: 1rem;
-    border: 1px solid yellow;
+    
     
     background-color: #3f474e;
     display: flex;
